# gitignoregen

./: .gitignore  README.md  pyproject.toml
src/gitignoregen/: cli.py
