[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitignoregen"
version = "0.2.0"
description = "Auto-generate .gitignore based on detected project type"
requires-python = ">=3.11"
dependencies = [
    "click",
    "httpx",
]

[project.scripts]
gitignoregen = "gitignoregen.cli:main"
